--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col">
-            <h1>Group Name</h1>
+            <h1>Things Of Internet</h1>
             <p>Join Our Adventure</p>
           </div>
         </div>
