--- a/index.html
+++ b/index.html
@@ -249,13 +249,13 @@
         </div>
         <div class="memArea fade-left reveal">
           <div class="member No4">
-            <h2>Harshit Reddy</h2>
+            <h2>Harshith Reddy</h2>
             <img class="memImg" src="img/teamMember/harshit.jpeg">
           </div>
           <div class="memText">
             <h2>Frontend Developer</h2>
             <p>
-              "Hello everyone! I'm Harshit, a web enthusiast and Computer
+              "Hello everyone! I'm Harshith, a web enthusiast and Computer
               Science student on a mission to make the internet a more beautiful
               and functional place. With a creative eye for design and a knack
               for coding, I specialize in creating seamless user experiences and
