--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Group Name</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,16 +25,16 @@
           ></div>
           <nav>
               <div class="navLinks">
-              <a href="#">Code Editor</a>
-              <a href="#">Team</a>
-              <a href="#">Check Out</a>
+              <a href="editor/editor.html">Code Editor</a>
+              <a href="#teamId">Team</a>
+              <a href="store/store.html">Store</a>
               </div>
           </nav>
           
       <div class="container">
         <div class="row align-items-center">
           <div class="col">
-            <h1>Things Of Internet</h1>
+            <h1>things of internet</h1>
             <p>Join Our Adventure</p>
           </div>
         </div>
@@ -193,9 +192,9 @@
           </div>
         </div>
       </aside>
-      <div class="team">
+      <div class="team" id="teamId">
         <div class="teamHead">
-            <a href="#">OUR TEAM</a>
+            <a href="#teamId">OUR TEAM</a>
         </div>
         <div class="memArea fade-left reveal">
           <div class="member No1">
@@ -249,13 +248,13 @@
         </div>
         <div class="memArea fade-left reveal">
           <div class="member No4">
-            <h2>Harshith Reddy</h2>
+            <h2>Harshit Reddy</h2>
             <img class="memImg" src="img/teamMember/harshit.jpeg">
           </div>
           <div class="memText">
             <h2>Frontend Developer</h2>
             <p>
-              "Hello everyone! I'm Harshith, a web enthusiast and Computer
+              "Hello everyone! I'm Harshit, a web enthusiast and Computer
               Science student on a mission to make the internet a more beautiful
               and functional place. With a creative eye for design and a knack
               for coding, I specialize in creating seamless user experiences and
