--- a/editor/editor.html
+++ b/editor/editor.html
@@ -172,7 +172,7 @@
     <nav>
         <a href="../index.html" class="leftlink">HOME</a>
         <a href="#" class="leftlink"><button onclick="history.back()" class="goBack">Go Back</button></a>
-        <a href="" class="rightlink">STORE</a>
+        <a href="../store/store.html" class="rightlink">STORE</a>
     </nav>
     <div class="container">
         <div class="left">
